--- a/src/server/scripts/CMakeLists.txt
+++ b/src/server/scripts/CMakeLists.txt
@@ -22,7 +22,7 @@ file(GLOB_RECURSE sources_EasternKingdoms EasternKingdoms/*.cpp EasternKingdoms/
 file(GLOB_RECURSE sources_Kalimdor Kalimdor/*.cpp Kalimdor/*.h)
 file(GLOB_RECURSE sources_Outland Outland/*.cpp Outland/*.h)
 file(GLOB_RECURSE sources_Northrend Northrend/*.cpp Northrend/*.h)
-file(GLOB_RECURSE sources_Maelstrom Maelstrom/*.cpp Maelstrom/*.h)
+#file(GLOB_RECURSE sources_Maelstrom Maelstrom/*.cpp Maelstrom/*.h)
 file(GLOB_RECURSE sources_Custom Custom/*.cpp Custom/*.h)
 file(GLOB_RECURSE sources_Commands Commands/*.cpp Commands/*.h)
 file(GLOB_RECURSE sources_Examples Examples/*.cpp Examples/*.h)
@@ -41,7 +41,7 @@ source_group(EasternKingdoms FILES ${sources_EasternKingdoms})
 source_group(Kalimdor FILES ${sources_Kalimdor})
 source_group(Outland FILES ${sources_Outland})
 source_group(Northrend FILES ${sources_Northrend})
-source_group(Maelstrom FILES ${sources_Maelstrom})
+#source_group(Maelstrom FILES ${sources_Maelstrom})
 source_group(OutdoorPvP FILES ${sources_OutdoorPvP})
 source_group(Commands FILES ${sources_Commands})
 source_group(Examples FILES ${sources_Examples})
