--- a/src/server/scripts/Maelstrom/CMakeLists.txt
+++ b/src/server/scripts/Maelstrom/CMakeLists.txt
@@ -9,17 +9,16 @@
 # WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
 # implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 
+file(GLOB_RECURSE scripts_TheStonecore Maelstrom/TheStonecore/*.cpp Maelstrom/TheStonecore/*.h)
+file(GLOB_RECURSE scripts_Zones Maelstrom/*.cpp Maelstrom/*.h)
+
+source_group(Maelstrom\\TheStonecore FILES ${scripts_TheStonecore})
+source_group(Maelstrom\\Zones FILES ${scripts_Zones})
+
 set(scripts_STAT_SRCS
   ${scripts_STAT_SRCS}
-  Maelstrom/zone_kezan.cpp
-  Maelstrom/zone_deepholm.cpp
-  Maelstrom/TheStonecore/boss_corborus.cpp
-  Maelstrom/TheStonecore/boss_high_priestess_azil.cpp
-  Maelstrom/TheStonecore/boss_ozruk.cpp
-  Maelstrom/TheStonecore/boss_slabhide.cpp
-  Maelstrom/TheStonecore/instance_the_stonecore.cpp
-  Maelstrom/TheStonecore/the_stonecore.cpp
-  Maelstrom/TheStonecore/the_stonecore.h
+  ${scripts_TheStonecore}
+  ${scripts_Zones}
 )
 
 message("  -> Prepared: The Maelstrom")
