--- a/src/server/scripts/CMakeLists.txt
+++ b/src/server/scripts/CMakeLists.txt
@@ -18,7 +18,7 @@ endif ()
 
 file(GLOB_RECURSE sources_PrecompiledHeaders PrecompiledHeaders/*.cpp PrecompiledHeaders/*.h)
 file(GLOB_RECURSE sources_Battlegrounds Battlegrounds/*.cpp  Battlegrounds/*.h)
-file(GLOB_RECURSE sources_EasternKingdoms EasternKingdoms/*.cpp EasternKingdoms/*.h)
+#file(GLOB_RECURSE sources_EasternKingdoms EasternKingdoms/*.cpp EasternKingdoms/*.h)
 file(GLOB_RECURSE sources_Kalimdor Kalimdor/*.cpp Kalimdor/*.h)
 file(GLOB_RECURSE sources_Outland Outland/*.cpp Outland/*.h)
 file(GLOB_RECURSE sources_Northrend Northrend/*.cpp Northrend/*.h)
@@ -37,7 +37,7 @@ file(GLOB_RECURSE sources_World World/*.cpp World/*.h)
 source_group(CMake FILES CMakeLists.txt)
 source_group(Battlegrounds FILES ${sources_Battlegrounds})
 source_group(PrecompiledHeaders FILES ${sources_PrecompiledHeaders})
-source_group(EasternKingdoms FILES ${sources_EasternKingdoms})
+#source_group(EasternKingdoms FILES ${sources_EasternKingdoms})
 source_group(Kalimdor FILES ${sources_Kalimdor})
 source_group(Outland FILES ${sources_Outland})
 source_group(Northrend FILES ${sources_Northrend})
