--- a/src/server/scripts/CMakeLists.txt
+++ b/src/server/scripts/CMakeLists.txt
@@ -19,7 +19,7 @@ endif ()
 file(GLOB_RECURSE sources_PrecompiledHeaders PrecompiledHeaders/*.cpp PrecompiledHeaders/*.h)
 file(GLOB_RECURSE sources_Battlegrounds Battlegrounds/*.cpp  Battlegrounds/*.h)
 #file(GLOB_RECURSE sources_EasternKingdoms EasternKingdoms/*.cpp EasternKingdoms/*.h)
-file(GLOB_RECURSE sources_Kalimdor Kalimdor/*.cpp Kalimdor/*.h)
+#file(GLOB_RECURSE sources_Kalimdor Kalimdor/*.cpp Kalimdor/*.h)
 file(GLOB_RECURSE sources_Outland Outland/*.cpp Outland/*.h)
 file(GLOB_RECURSE sources_Northrend Northrend/*.cpp Northrend/*.h)
 #file(GLOB_RECURSE sources_Maelstrom Maelstrom/*.cpp Maelstrom/*.h)
@@ -38,7 +38,7 @@ source_group(CMake FILES CMakeLists.txt)
 source_group(Battlegrounds FILES ${sources_Battlegrounds})
 source_group(PrecompiledHeaders FILES ${sources_PrecompiledHeaders})
 #source_group(EasternKingdoms FILES ${sources_EasternKingdoms})
-source_group(Kalimdor FILES ${sources_Kalimdor})
+#source_group(Kalimdor FILES ${sources_Kalimdor})
 source_group(Outland FILES ${sources_Outland})
 source_group(Northrend FILES ${sources_Northrend})
 #source_group(Maelstrom FILES ${sources_Maelstrom})
