New Structure of CMakeList.txt for the Script of the Portfolio Northrend

--- a/src/server/scripts/CMakeLists.txt
+++ b/src/server/scripts/CMakeLists.txt
@@ -21,7 +21,7 @@ file(GLOB_RECURSE sources_Battlegrounds Battlegrounds/*.cpp  Battlegrounds/*.h)
 #file(GLOB_RECURSE sources_EasternKingdoms EasternKingdoms/*.cpp EasternKingdoms/*.h)
 #file(GLOB_RECURSE sources_Kalimdor Kalimdor/*.cpp Kalimdor/*.h)
 file(GLOB_RECURSE sources_Outland Outland/*.cpp Outland/*.h)
-file(GLOB_RECURSE sources_Northrend Northrend/*.cpp Northrend/*.h)
+#file(GLOB_RECURSE sources_Northrend Northrend/*.cpp Northrend/*.h)
 #file(GLOB_RECURSE sources_Maelstrom Maelstrom/*.cpp Maelstrom/*.h)
 file(GLOB_RECURSE sources_Custom Custom/*.cpp Custom/*.h)
 file(GLOB_RECURSE sources_Commands Commands/*.cpp Commands/*.h)
@@ -40,7 +40,7 @@ source_group(PrecompiledHeaders FILES ${sources_PrecompiledHeaders})
 #source_group(EasternKingdoms FILES ${sources_EasternKingdoms})
 #source_group(Kalimdor FILES ${sources_Kalimdor})
 source_group(Outland FILES ${sources_Outland})
-source_group(Northrend FILES ${sources_Northrend})
+#source_group(Northrend FILES ${sources_Northrend})
 #source_group(Maelstrom FILES ${sources_Maelstrom})
 source_group(OutdoorPvP FILES ${sources_OutdoorPvP})
 source_group(Commands FILES ${sources_Commands})
