New Structure of CMakeList.txt for the Script of the Folder Outland

--- a/src/server/scripts/CMakeLists.txt
+++ b/src/server/scripts/CMakeLists.txt
@@ -20,7 +20,7 @@ file(GLOB_RECURSE sources_PrecompiledHeaders PrecompiledHeaders/*.cpp Precompile
 file(GLOB_RECURSE sources_Battlegrounds Battlegrounds/*.cpp  Battlegrounds/*.h)
 #file(GLOB_RECURSE sources_EasternKingdoms EasternKingdoms/*.cpp EasternKingdoms/*.h)
 #file(GLOB_RECURSE sources_Kalimdor Kalimdor/*.cpp Kalimdor/*.h)
-file(GLOB_RECURSE sources_Outland Outland/*.cpp Outland/*.h)
+#file(GLOB_RECURSE sources_Outland Outland/*.cpp Outland/*.h)
 #file(GLOB_RECURSE sources_Northrend Northrend/*.cpp Northrend/*.h)
 #file(GLOB_RECURSE sources_Maelstrom Maelstrom/*.cpp Maelstrom/*.h)
 file(GLOB_RECURSE sources_Custom Custom/*.cpp Custom/*.h)
@@ -39,7 +39,7 @@ source_group(Battlegrounds FILES ${sources_Battlegrounds})
 source_group(PrecompiledHeaders FILES ${sources_PrecompiledHeaders})
 #source_group(EasternKingdoms FILES ${sources_EasternKingdoms})
 #source_group(Kalimdor FILES ${sources_Kalimdor})
-source_group(Outland FILES ${sources_Outland})
+#source_group(Outland FILES ${sources_Outland})
 #source_group(Northrend FILES ${sources_Northrend})
 #source_group(Maelstrom FILES ${sources_Maelstrom})
 source_group(OutdoorPvP FILES ${sources_OutdoorPvP})
