--- a/src/server/scripts/CMakeLists.txt
+++ b/src/server/scripts/CMakeLists.txt
@@ -32,7 +32,7 @@ file(GLOB_RECURSE sources_Pet Pet/*.cpp Pet/*.h)
 file(GLOB_RECURSE sources_OutdoorPvP OutdoorPvP/*.cpp OutdoorPvP/*.h)
 file(GLOB_RECURSE sources_Spells Spells/*.cpp Spells/*.h)
 file(GLOB_RECURSE sources_ScriptLoader ScriptLoader/*.cpp ScriptLoader/*.h)
-file(GLOB_RECURSE sources_World World/*.cpp World/*.h)
+#file(GLOB_RECURSE sources_World World/*.cpp World/*.h)
 
 source_group(CMake FILES CMakeLists.txt)
 source_group(Battlegrounds FILES ${sources_Battlegrounds})
@@ -50,7 +50,7 @@ source_group(Events FILES ${sources_Events})
 source_group(Pet FILES ${sources_Pet})
 source_group(Spells FILES ${sources_Spells})
 source_group(ScriptLoader FILES ${sources_ScriptLoader})
-source_group(World FILES ${sources_World})
+#source_group(World FILES ${sources_World})
 
 message(STATUS "SCRIPT PREPARATIONS")
 include(Spells/CMakeLists.txt)
